fixed overflow on mobile

--- a/static/base.css
+++ b/static/base.css
@@ -38,6 +38,11 @@ p {
     margin-bottom: 2vh;
 }
 
+p, ol, ul {
+    overflow-x: scroll;
+    overflow-y: hidden;
+}
+
 h1, h2, h3, h4, h5, h6 {
     line-height: 1;
     letter-spacing: 0.05em;
